--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 	<description>testing rest using rest assured</description>
 
 	<dependencies>
+		<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
 		<dependency>
 			<groupId>io.rest-assured</groupId>
 			<artifactId>rest-assured</artifactId>
@@ -15,6 +16,7 @@
 			<scope>test</scope>
 		</dependency>
 
+	
 		<!-- used to parse Json Document -->
 		<dependency>
 			<groupId>io.rest-assured</groupId>
@@ -22,12 +24,14 @@
 			<version>3.0.2</version>
 		</dependency>
 
+	
 		<!-- to validate that a JSON response conforms to a Json Schema -->
 		<dependency>
 			<groupId>io.rest-assured</groupId>
 			<artifactId>json-schema-validator</artifactId>
 			<version>3.0.2</version>
 		</dependency>
+
 
 		<!-- used to parse xml document -->
 		<dependency>
@@ -36,6 +40,8 @@
 			<version>3.0.2</version>
 		</dependency>
 
+
+
 		<!-- junit/testng can be used -->
 		<dependency>
 			<groupId>org.testng</groupId>
@@ -43,7 +49,9 @@
 			<version>6.10</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.hamcrest/java-hamcrest -->
+
+
+		<!-- https://mvnrepository.com/artifact/org.hamcrest/java-hamcrest  | used for regex -->
 		<dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>java-hamcrest</artifactId>
