all test commented out

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,18 @@
 	<name>restassured</name>
 	<description>testing rest using rest assured</description>
 
+	<properties>
+		<testng.version>6.14.3</testng.version>
+	</properties>
+
+	<repositories>
+		<repository>
+			<id>jcenter</id>
+			<name>bintray</name>
+			<url>http://jcenter.bintray.com</url>
+		</repository>
+	</repositories>
+
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
 		<dependency>
@@ -16,7 +28,7 @@
 			<scope>test</scope>
 		</dependency>
 
-	
+
 		<!-- used to parse Json Document -->
 		<dependency>
 			<groupId>io.rest-assured</groupId>
@@ -24,7 +36,7 @@
 			<version>3.0.2</version>
 		</dependency>
 
-	
+
 		<!-- to validate that a JSON response conforms to a Json Schema -->
 		<dependency>
 			<groupId>io.rest-assured</groupId>
@@ -46,19 +58,34 @@
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
-			<version>6.10</version>
+			<version>${testng.version}</version>
 		</dependency>
 
 
 
-		<!-- https://mvnrepository.com/artifact/org.hamcrest/java-hamcrest  | used for regex -->
+		<!-- https://mvnrepository.com/artifact/org.hamcrest/java-hamcrest | used 
+			for regex -->
 		<dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>java-hamcrest</artifactId>
 			<version>2.0.0.0</version>
 		</dependency>
 
-
-
 	</dependencies>
+
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.2</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
