--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.restassured</groupId>
@@ -9,6 +10,8 @@
 
 	<properties>
 		<testng.version>6.14.3</testng.version>
+		<!-- <restassured.version>3.0.2</restassured.version> -->
+		<restassured.version>4.0.0</restassured.version>
 	</properties>
 
 	<repositories>
@@ -20,11 +23,20 @@
 	</repositories>
 
 	<dependencies>
+
+		<!-- https://mvnrepository.com/artifact/org.codehaus.groovy/groovy-all -->
+		<dependency>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy-all</artifactId>
+			<version>3.0.0-beta-1</version>
+			<type>pom</type>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
 		<dependency>
 			<groupId>io.rest-assured</groupId>
 			<artifactId>rest-assured</artifactId>
-			<version>3.0.2</version>
+			<version>${restassured.version}</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -33,7 +45,7 @@
 		<dependency>
 			<groupId>io.rest-assured</groupId>
 			<artifactId>json-path</artifactId>
-			<version>3.0.2</version>
+			<version>${restassured.version}</version>
 		</dependency>
 
 
@@ -41,7 +53,7 @@
 		<dependency>
 			<groupId>io.rest-assured</groupId>
 			<artifactId>json-schema-validator</artifactId>
-			<version>3.0.2</version>
+			<version>${restassured.version}</version>
 		</dependency>
 
 
@@ -49,7 +61,7 @@
 		<dependency>
 			<groupId>io.rest-assured</groupId>
 			<artifactId>xml-path</artifactId>
-			<version>3.0.2</version>
+			<version>${restassured.version}</version>
 		</dependency>
 
 
@@ -70,6 +82,9 @@
 			<artifactId>java-hamcrest</artifactId>
 			<version>2.0.0.0</version>
 		</dependency>
+
+
+
 
 	</dependencies>
 
