--- a/pom.xml
+++ b/pom.xml
@@ -8,29 +8,32 @@
 	<name>restassured</name>
 	<description>testing rest using rest assured</description>
 
+
 	<properties>
 		<testng.version>6.14.3</testng.version>
 		<!-- <restassured.version>3.0.2</restassured.version> -->
 		<restassured.version>4.0.0</restassured.version>
 	</properties>
 
-	<repositories>
-		<repository>
-			<id>jcenter</id>
-			<name>bintray</name>
-			<url>http://jcenter.bintray.com</url>
-		</repository>
-	</repositories>
-
 	<dependencies>
 
-		<!-- https://mvnrepository.com/artifact/org.codehaus.groovy/groovy-all -->
+		<!-- make sure this dependency is at top - its a bug -->
 		<dependency>
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy-all</artifactId>
 			<version>3.0.0-beta-1</version>
 			<type>pom</type>
 		</dependency>
+
+
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>${testng.version}</version>
+		</dependency>
+
+
+
 
 		<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
 		<dependency>
@@ -66,17 +69,7 @@
 
 
 
-		<!-- junit/testng can be used -->
-		<dependency>
-			<groupId>org.testng</groupId>
-			<artifactId>testng</artifactId>
-			<version>${testng.version}</version>
-		</dependency>
 
-
-
-		<!-- https://mvnrepository.com/artifact/org.hamcrest/java-hamcrest | used 
-			for regex -->
 		<dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>java-hamcrest</artifactId>
@@ -84,23 +77,16 @@
 		</dependency>
 
 
+		<!-- default jaxb-api jar(2.2.12) is not working hence added following 
+			latest dependencies -->
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+
 
 
 	</dependencies>
-
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.2</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 
 </project>
