--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,17 @@
 
 	<properties>
 		<testng.version>6.14.3</testng.version>
-		<!-- <restassured.version>3.0.2</restassured.version> -->
 		<restassured.version>4.0.0</restassured.version>
+		<jacksondatabind.version>2.11.2</jacksondatabind.version>
+		<jacksondataformatxml.version>2.11.2</jacksondataformatxml.version>
+		<jacksoncore.version>2.11.2</jacksoncore.version>
+		<jacksonannotation.version>2.11.2</jacksonannotation.version>
+		<snakeyaml.version>1.24</snakeyaml.version>
+		<gson.version>2.8.5</gson.version>
+		<lang3.version>3.7</lang3.version>
+		<guava.version>25.1-jre</guava.version>
+		<opencsv.version>4.1</opencsv.version>
+		<apachecsv.version>1.6</apachecsv.version>
 	</properties>
 
 	<dependencies>
@@ -99,6 +108,62 @@
 			<artifactId>maven-surefire-plugin</artifactId>
 			<version>2.22.2</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>${gson.version}</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-yaml -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-yaml</artifactId>
+			<version>${jacksondataformatxml.version}</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-xml -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
+			<version>${jacksondataformatxml.version}</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jacksondatabind.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>${lang3.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>${guava.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-csv</artifactId>
+			<version>${apachecsv.version}</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.opencsv/opencsv -->
+		<dependency>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>${opencsv.version}</version>
+		</dependency>
+
+		<!-- <dependency> <groupId>com.fasterxml.jackson.core</groupId> <artifactId>jackson-core</artifactId> 
+			<version>${jacksoncore.version}</version> </dependency> <dependency> <groupId>com.fasterxml.jackson.core</groupId> 
+			<artifactId>jackson-annotations</artifactId> <version>${jacksonannotation.version}</version> 
+			</dependency> -->
 
 
 	</dependencies>
