--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,9 @@
 
 
 	<properties>
+		<groovy.version>3.0.0-beta-1</groovy.version>
 		<testng.version>6.14.3</testng.version>
-		<restassured.version>4.0.0</restassured.version>
+		<restassured.version>4.3.3</restassured.version>
 		<jacksondatabind.version>2.11.2</jacksondatabind.version>
 		<jacksondataformatxml.version>2.11.2</jacksondataformatxml.version>
 		<jacksoncore.version>2.11.2</jacksoncore.version>
@@ -22,15 +23,21 @@
 		<guava.version>25.1-jre</guava.version>
 		<opencsv.version>4.1</opencsv.version>
 		<apachecsv.version>1.6</apachecsv.version>
+		<wiremock.version>2.25.0</wiremock.version>
+		<junit.version>5.6.2</junit.version>
+		<slf4j.version>1.7.25</slf4j.version>
+		<owner.version>1.0.11</owner.version>
 	</properties>
 
 	<dependencies>
 
 		<!-- make sure this dependency is at top - its a bug -->
+		<!-- with rest assured grovy need to be updated as well -->
+		<!-- https://github.com/rest-assured/rest-assured/blob/master/changelog.txt -->
 		<dependency>
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy-all</artifactId>
-			<version>3.0.0-beta-1</version>
+			<version>${groovy.version}</version>
 			<type>pom</type>
 		</dependency>
 
@@ -160,12 +167,63 @@
 			<version>${opencsv.version}</version>
 		</dependency>
 
-		<!-- <dependency> <groupId>com.fasterxml.jackson.core</groupId> <artifactId>jackson-core</artifactId> 
-			<version>${jacksoncore.version}</version> </dependency> <dependency> <groupId>com.fasterxml.jackson.core</groupId> 
-			<artifactId>jackson-annotations</artifactId> <version>${jacksonannotation.version}</version> 
-			</dependency> -->
+		<!-- this dependency case multiple SLF4J bindings issue -->
+		<dependency>
+			<groupId>com.github.tomakehurst</groupId>
+			<artifactId>wiremock</artifactId>
+			<version>${wiremock.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-params</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- To fix mult binding issue: added wagon, mvn core, slf4j -->
+		<!-- binding issue coming on incresing of groovy ver-->
+		<!-- not coming with grovy 3.0.0-beta-1 -->
+		<dependency>
+			<groupId>org.apache.maven.wagon</groupId>
+			<artifactId>wagon-webdav-jackrabbit</artifactId>
+			<version>1.0-beta-6</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-nop</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-core</artifactId>
+			<version>3.6.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.aeonbits.owner/owner -->
+		<dependency>
+			<groupId>org.aeonbits.owner</groupId>
+			<artifactId>owner</artifactId>
+			<version>${owner.version}</version>
+		</dependency>
 
 
 	</dependencies>
-
 </project>
